--- a/fdup/fdup/web-app/css/scaffolding.css
+++ b/fdup/fdup/web-app/css/scaffolding.css
@@ -8,19 +8,18 @@ body {
 	}
 }
 
+
+
+.print {
+	display: none;
+}
+
 .btn {
 	vertical-align: middle; /* ensure buttons line up even when they are different tag types [a, button] */
 }
 
 /* index page */
 
-img#github-ribbon {
-	position: absolute; 
-	top: 0; 
-	right: 0; 
-	border: 0;
-	z-index: 1030; /* no idea where this comes from, lowest value that works */
-}
 
 @media (max-width: 768px) {
 	/* prevent the brand name wrapping or overlapping the menu toggle */
